<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sudhaker_ftc_test.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/et_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/commonMargin_Padding"
            android:background="@drawable/border_shape"
            android:hint="@string/name"
            android:inputType="textVisiblePassword"
            android:padding="@dimen/commonMargin_Padding" />

        <EditText
            android:id="@+id/et_EmailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_Name"
            android:layout_margin="@dimen/commonMargin_Padding"
            android:background="@drawable/border_shape"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:padding="@dimen/commonMargin_Padding" />

        <EditText
            android:id="@+id/et_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_EmailId"
            android:layout_margin="@dimen/commonMargin_Padding"
            android:background="@drawable/border_shape"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/commonMargin_Padding" />

        <EditText
            android:id="@+id/et_ConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_Password"
            android:layout_margin="@dimen/commonMargin_Padding"
            android:background="@drawable/border_shape"
            android:hint="@string/confirm_Password"
            android:inputType="textPassword"
            android:padding="@dimen/commonMargin_Padding" />


        <Button
            android:id="@+id/btn_SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_ConfirmPassword"
            android:layout_margin="@dimen/commonMargin_Padding"
            android:text="@string/sign_up" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_SignUp"
            android:layout_margin="@dimen/commonMargin_Padding"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/commonMargin_Padding"
                android:text="@string/old_user" />

            <Button
                android:id="@+id/btn_Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/commonMargin_Padding"
                android:text="@string/login" />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
