<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sudhaker_ftc_test.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/et_EmailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/commonMargin_Padding"
            android:background="@drawable/border_shape"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:padding="@dimen/commonMargin_Padding" />

        <EditText
            android:id="@+id/et_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_EmailId"
            android:layout_margin="@dimen/commonMargin_Padding"
            android:background="@drawable/border_shape"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/commonMargin_Padding" />

        <CheckBox
            android:id="@+id/cb_RememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/et_Password"
            android:layout_margin="@dimen/commonMargin_Padding"
            android:text="@string/remember_me" />

        <Button
            android:id="@+id/btn_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cb_RememberMe"
            android:layout_margin="@dimen/commonMargin_Padding"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_Login"
            android:layout_margin="@dimen/commonMargin_Padding"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/commonMargin_Padding"
                android:text="@string/new_user"/>
            <Button
                android:id="@+id/btn_SignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/commonMargin_Padding"
                android:text="@string/sign_up" />
            <Button
                android:id="@+id/btn_ForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/commonMargin_Padding"
                android:text="Forgot Password" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
