<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sudhaker_ftc_test.ForgotPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/et_EmailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/commonMargin_Padding"
            android:background="@drawable/border_shape"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:padding="@dimen/commonMargin_Padding" />

        <EditText
            android:id="@+id/et_NewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_EmailId"
            android:layout_margin="@dimen/commonMargin_Padding"
            android:background="@drawable/border_shape"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:padding="@dimen/commonMargin_Padding" />

        <EditText
            android:id="@+id/et_ConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_NewPassword"
            android:layout_margin="@dimen/commonMargin_Padding"
            android:background="@drawable/border_shape"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword"
            android:padding="@dimen/commonMargin_Padding" />

        <Button
            android:id="@+id/btn_ResetPasswod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_ConfirmNewPassword"
            android:layout_margin="@dimen/commonMargin_Padding"
            android:text="@string/reset_password" />


    </RelativeLayout>

</RelativeLayout>
